...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="What type of workout?" />

    <Button
        android:id="@+id/abBtn"
        android:onClick="abClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backBtn"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/shoulderBtn"
        android:text="Abs" />
</RelativeLayout>

