<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3961a3"
    tools:context="com.cmsc355.ccnd.gymrat.HomeScreen">


    <Button
        android:id="@+id/MyWorkouts"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ExampleWorkout"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:onClick="myWorksoutsClick"
        android:text="My Workouts"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/ExampleWorkout"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_alignStart="@+id/CalorieCounter"
        android:layout_below="@+id/MyWorkouts"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:onClick="exampleWorkoutClick"
        android:text="Example Workout"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyWorkouts"
        tools:layout_constraintLeft_creator="16"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/CalorieCounter"
        android:layout_width="310dp"
        android:layout_height="65dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:onClick="calorieCounterClick"
        android:text="Calorie Counter"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExampleWorkout"
        tools:ignore="MissingConstraints"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/SetGoals"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:onClick="setGoalsClick"
        android:text="Set Goals"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalorieCounter" />

    <Button
        android:id="@+id/CreateCustomWorkout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:background="#565555"
        android:onClick="createWorkoutClick"
        android:text="Create Custom Workout"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LiftingTips"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/LiftingTips"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/WeightTracker"
        android:layout_alignBottom="@+id/WeightTracker"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/CreateCustomWorkout"
        android:background="#565555"
        android:onClick="liftTipClick"
        android:text="Lifting Tips"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WeightTracker"
        app:layout_constraintStart_toEndOf="@+id/CreateCustomWorkout"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/WeightTracker"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/CreateCustomWorkout"
        android:layout_alignBottom="@+id/CreateCustomWorkout"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/MyProfile"
        android:background="#565555"
        android:onClick="weightClick"
        android:text="Weight Tracker"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MyProfile"
        app:layout_constraintStart_toEndOf="@+id/LiftingTips"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/MyProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/WeightTracker"
        android:layout_alignBottom="@+id/WeightTracker"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="13dp"
        android:background="#565555"
        android:onClick="profileClick"
        android:text="My Profile"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WeightTracker"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
