...

    <TextView
        android:id="@+id/exampleDisplay1"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/exampleDisplay"
        android:layout_below="@+id/exampleDisplay"
        android:layout_marginTop="23dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/exampleDisplay"
...
